cmake_minimum_required(VERSION 3.12)
project(main LANGUAGES C CXX)
set(CMAKE_INCLUDE_CURRENT_DIR on)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)
include_directories(inc)
link_directories(lib)
add_compile_definitions(UNICODE _UNICODE)
add_executable(${PROJECT_NAME} src/main.c)
target_link_libraries(${PROJECT_NAME} x64/wpcap x64/packet)
